# cloud-computing

./: .gitignore  Taskfile.yml  pyproject.toml  setup-localstack.sh
.cursor/rules/: git-conventions.mdc
.devcontainer/: devcontainer.json
.rules/: .copilot-commit-message-instructions.md
HW1/: README.md  create-dynamo-table.sh  errors.py  main.py  models.py  parking-lot.template.yaml  parking-lot.yaml  sam-parking-lot.yaml  samconfig.toml  setup-localstack.sh
HW1/src/: entry_handler.py  exit_handler.py  requirements.txt
HW1/tests/: manual.rest
