[project]
name = "cloud-computing-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "boto3>=1.38.3",
    "fastapi>=0.115.12",
    "pydantic>=2.11.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[boto3,essential]>=1.38.3",
]
